<resources>
    <string name="app_name">MAL Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_discussion">Discussion</string>
    <string name="title_discover">Discover</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_seasonal">Seasonal</string>
    <string name="title_mylist">My List</string>
</resources>