<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discussion"
        android:icon="@drawable/ic_discussion"
        android:title="@string/title_discussion" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_seasonal"
        android:icon="@drawable/ic_seasonal"
        android:title="@string/title_seasonal" />

    <item
        android:id="@+id/navigation_mylist"
        android:icon="@drawable/ic_mylist"
        android:title="@string/title_mylist" />
</menu>